# voicebot

./: audio_stream_warpper.py  pyproject.toml  snippets.py  stdout  text_comprehension.py
